--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@
 language: R
 cache: packages
 
-r_github_packages:
-  - jimhester/lintr
+r_binary_packages:
+  - lintr
+  - covr
+
+after_success:
+  - R CMD INSTALL $PKG_TARBALL
+  - Rscript -e 'lintr::lint_package()'
+  - Rscript -e 'covr::codecov()'
