--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,9 @@ Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: MIT + file LICENSE
+License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    spelling,
-    covr
+    spelling
 Language: en-US
