--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,11 @@ Description: More about what it does (maybe more than one line)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+    curl,
+    V8,
+    jsonlite,
+    magrittr
 Suggests: 
     spelling,
     covr
