--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: leaflet.providers
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Automatically Retrieves and Updates Leaflet Providers 
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Leslie Huang
+Maintainer: Leslie Huang <lesliehuang@nyu.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: MIT + file LICENSE
