--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,11 @@ Description: More about what it does (maybe more than one line)
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Imports:
+    curl,
+    jsonlite,
+    magrittr,
+    usethis
 Suggests: 
     spelling
 Language: en-US
