add v8 dep to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,8 @@ after_success:
   - R CMD INSTALL $PKG_TARBALL
   - Rscript -e 'lintr::lint_package()'
   - Rscript -e 'covr::codecov()'
+
+addons:
+  apt:
+    packages:
+      - libv8-dev
