--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: leaflet.providers
 Type: Package
-Title: Automatically Retrieves and Updates Leaflet Providers 
+Title: Leaflet Providers 
 Version: 0.1.0
 Author: Leslie Huang
 Maintainer: Leslie Huang <lesliehuang@nyu.edu>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Description: This package contains provider information from Leaflet.js for the leaflet R package.
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
