--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,12 @@ License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
+    V8,
     jsonlite,
-    magrittr,
-    usethis
 Suggests: 
-    spelling
+    spelling,
+    magrittr,
+    usethis,
+    codecov,
 Language: en-US
 RoxygenNote: 6.1.1
