--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Description: More about what it does (maybe more than one line)
 License: BSD_2_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends:
+    R (>= 2.10)
 Imports:
     V8,
     jsonlite,
