--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,11 @@ Package: leaflet.providers
 Type: Package
 Title: Leaflet Providers 
 Version: 1.8.0
-Author: Leslie Huang
+Authors@R: c(
+        person("Leslie", "Huang", email = "lesliehuang@nyu.edu", role = c("aut", "cre")),
+        person("Leaflet Providers contributors", role = c("ctb", "cph"), comment = "Leaflet Providers plugin"),
+        person("RStudio", role = c("cph", "fnd"))
+    )
 Maintainer: Leslie Huang <lesliehuang@nyu.edu>
 Description: Contains provider information from Leaflet.js for the leaflet R package.
 License: BSD_2_clause + file LICENSE
@@ -19,5 +23,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 Imports: 
     htmltools
-URL: https://github.com/leslie-huang/leaflet.providers
-BugReports: https://github.com/leslie-huang/leaflet.providers/issues
+URL: https://github.com/rstudio/leaflet.providers
+BugReports: https://github.com/rstudio/leaflet.providers/issues
+Collate: 
+    'providers_data.R'
+    'get_current_providers.R'
