--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,32 +1,36 @@
-Package: leaflet.providers
 Type: Package
+Package: leaflet.providers
 Title: Leaflet Providers
 Version: 1.13.0
 Authors@R: c(
-      person("Leslie", "Huang", email = "lesliehuang@nyu.edu", role = c("aut")),
-      person("Barret", "Schloerke", email = "barret@posit.co", role = c("ctb", "cre"),
-        comment = c(ORCID = "0000-0001-9986-114X")),
-      person("Leaflet Providers contributors", role = c("ctb", "cph"), comment = "Leaflet Providers plugin"),
-      person("Posit", role = c("cph", "fnd"))
-    )
+    person("Leslie", "Huang", , "lesliehuang@nyu.edu", role = "aut"),
+    person("Barret", "Schloerke", , "barret@posit.co", role = c("ctb", "cre"),
+           comment = c(ORCID = "0000-0001-9986-114X")),
+    person("Leaflet Providers contributors", role = c("ctb", "cph"),
+           comment = "Leaflet Providers plugin"),
+    person(given = "Posit Software, PBC", role = c("cph", "fnd"))
+  )
 Description: Contains third-party map tile provider information from
-    'Leaflet.js', <https://github.com/leaflet-extras/leaflet-providers>, to be
-    used with the 'leaflet' R package. Additionally, 'leaflet.providers'
-    enables users to retrieve up-to-date provider information between package
-    updates.
+    'Leaflet.js', <https://github.com/leaflet-extras/leaflet-providers>,
+    to be used with the 'leaflet' R package. Additionally,
+    'leaflet.providers' enables users to retrieve up-to-date provider
+    information between package updates.
 License: BSD_2_clause + file LICENSE
-Encoding: UTF-8
+URL: https://rstudio.github.io/leaflet.providers/, https://github.com/rstudio/leaflet.providers
+BugReports: https://github.com/rstudio/leaflet.providers/issues
 Depends:
     R (>= 3.6)
 Suggests:
-    V8,
     jsonlite,
-    testthat (>= 2.1.0)
+    testthat (>= 3.0.0),
+    V8
+Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-URL: https://github.com/rstudio/leaflet.providers
-BugReports: https://github.com/rstudio/leaflet.providers/issues
 Collate:
     'providers_data.R'
     'get_current_providers.R'
+    'leaflet.providers-package.R'
+Config/testthat/edition: 3
+Config/Needs/website: tidyverse/tidytemplate
