--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0001-9986-114X")),
     person("Leaflet Providers contributors", role = c("ctb", "cph"),
            comment = "Leaflet Providers plugin"),
-    person(given = "Posit Software, PBC", role = c("cph", "fnd"))
+    person("Posit Software, PBC", role = c("cph", "fnd"))
   )
 Description: Contains third-party map tile provider information from
     'Leaflet.js', <https://github.com/leaflet-extras/leaflet-providers>,
@@ -16,7 +16,8 @@ Description: Contains third-party map tile provider information from
     'leaflet.providers' enables users to retrieve up-to-date provider
     information between package updates.
 License: BSD_2_clause + file LICENSE
-URL: https://rstudio.github.io/leaflet.providers/, https://github.com/rstudio/leaflet.providers
+URL: https://rstudio.github.io/leaflet.providers/,
+    https://github.com/rstudio/leaflet.providers
 BugReports: https://github.com/rstudio/leaflet.providers/issues
 Depends:
     R (>= 3.6)
@@ -24,6 +25,8 @@ Suggests:
     jsonlite,
     testthat (>= 3.0.0),
     V8
+Config/Needs/website: tidyverse/tidytemplate
+Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 Roxygen: list(markdown = TRUE)
@@ -32,5 +35,3 @@ Collate:
     'providers_data.R'
     'get_current_providers.R'
     'leaflet.providers-package.R'
-Config/testthat/edition: 3
-Config/Needs/website: tidyverse/tidytemplate
