--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: leaflet.providers
 Title: Leaflet Providers
-Version: 1.13.0.9000
+Version: 1.13.0.9001
 Authors@R: c(
     person("Leslie", "Huang", , "lesliehuang@nyu.edu", role = "aut"),
     person("Barret", "Schloerke", , "barret@posit.co", role = c("ctb", "cre"),
@@ -21,6 +21,8 @@ URL: https://rstudio.github.io/leaflet.providers/,
 BugReports: https://github.com/rstudio/leaflet.providers/issues
 Depends:
     R (>= 2.10)
+Imports: 
+    htmltools
 Suggests:
     jsonlite,
     testthat (>= 3.0.0),
@@ -35,3 +37,4 @@ Collate:
     'providers_data.R'
     'get_current_providers.R'
     'leaflet.providers-package.R'
+    'zzz.R'
